--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,2 @@
-/* Choose google font for headings and different font for paragraphs, add css links to the project*/
+/* Cfont-family: 'Advent Pro', sans-serif;
+font-family: 'Bellota Text', cursive; */
