--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,15 @@ nav {
   border-radius: 5px;
   margin: 5px 12px;
 }
+footer .social-links a {
+  color: var(--primary-color);
+  padding: 10px 14px;
+  background-color: var(--quarternary-color);
+  border-radius: 50%;
+}
 
-.btn-branding {
+.btn-branding,
+.social-links {
   background: var(--quarternary-color);
   color: var(--primary-color);
   border-radius: 5px;
@@ -77,9 +84,14 @@ nav {
   padding: 15px 30px;
   margin-top: 15px;
 }
-.btn-branding:hover {
+
+.btn-branding:hover,
+footer .social-links:hover {
   background-color: var(--secondary-color);
   color: var(--quarternary-color);
+}
+footer .social-links a:hover {
+  color: var(--secondary-color);
 }
 
 .professional-projects img {
@@ -111,6 +123,7 @@ nav {
   border: none;
   padding: 0;
 }
+
 @media (max-width: 768px) {
   .introduction {
     text-align: center;
